--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smart-log",
   "version": "0.1.0",
-  "description": "smart-log is able to output log",
+  "description": "smart-log is very smart!",
   "main": "index.js",
   "scripts": {
   },
